--- a/css/style.scss
+++ b/css/style.scss
@@ -1,22 +1,22 @@
 /* FONTS */
 @font-face {
   font-family: "agrandir";
-  src: url(/fonts/Agrandir/OTF/Agrandir-GrandHeavy.otf) format("opentype");
-  src: url(/fonts/Agrandir/TTF/Agrandir-GrandHeavy.ttf) format("truetype");
+  src: url(../fonts/Agrandir/OTF/Agrandir-GrandHeavy.otf) format("opentype");
+  src: url(../fonts/Agrandir/TTF/Agrandir-GrandHeavy.ttf) format("truetype");
   font-weight: 900;
 }
 
 @font-face {
   font-family: "agrandir";
-  src: url(/fonts/Agrandir/OTF/Agrandir-Medium.otf) format("opentype");
-  src: url(/fonts/Agrandir/TTF/Agrandir-Medium.ttf) format("truetype");
+  src: url(../fonts/Agrandir/OTF/Agrandir-Medium.otf) format("opentype");
+  src: url(../fonts/Agrandir/TTF/Agrandir-Medium.ttf) format("truetype");
   font-weight: 400;
 }
 
 @font-face {
   font-family: "agrandir";
-  src: url(/fonts/Agrandir/OTF/Agrandir-WideLight.otf) format("opentype");
-  src: url(/fonts/Agrandir/TTF/Agrandir-WideLight.ttf) format("truetype");
+  src: url(../fonts/Agrandir/OTF/Agrandir-WideLight.otf) format("opentype");
+  src: url(../fonts/Agrandir/TTF/Agrandir-WideLight.ttf) format("truetype");
   font-weight: 200;
 }
 
@@ -52,12 +52,14 @@ body {
 
 /* MAIN STYLE */
 .container {
+  margin: auto;
   width: 100%;
+  max-width: 1024px;
   height: 100%;
   display: flex;
   flex-flow: row wrap;
   color: white;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
 }
 
@@ -140,6 +142,7 @@ a {
 .tutorial {
   display: flex;
   flex-flow: column;
+  margin: 2rem;
 
   h1 {
     font-size: 1.5rem;
