--- a/css/style.scss
+++ b/css/style.scss
@@ -43,7 +43,7 @@ $cc-pink: #fc29fc;
 
 /* SETUP */
 html,
-body {
+body {  
   width: 100%;
   height: 100%;
   font-family: "agrandir";
@@ -52,10 +52,8 @@ body {
 
 /* MAIN STYLE */
 .container {
-  margin: auto;
-  width: 100%;
-  max-width: 1024px;
-  height: 100%;
+  width: inherit;
+  height: inherit;
   display: flex;
   flex-flow: row wrap;
   color: white;
@@ -101,31 +99,16 @@ a {
 .displayError {
   text-align: center;
   font-weight: 900;
-  position: fixed;
-  z-index: 1000;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: white;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-
-  h1 span {
-    color: #ddd;
-  }
-
-  img {
-    width: 175px;
-    height: 175px;
-  }
+  margin: 2rem 1rem 0 1rem;
 
   .error {
-    margin: 1.25rem 1rem;
+    font-weight: 400;
+    color: white;    
     max-width: 250px;
-    font-weight: 200;
   }
 }
 
@@ -258,6 +241,7 @@ a {
 
 .hide {
   opacity: 0;
+  margin: 0;
   pointer-events: none;
 }
 
