Fixed sampler position

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,6 @@ body {
   flex-flow: row wrap;
   color: white;
   justify-content: center;
-  align-items: center;
 }
 
 /* TEXT STYLING */
@@ -106,6 +105,7 @@ a:link, a:visited, a:hover {
   border-radius: 10px;
   padding: 5px;
   margin: 2rem;
+  align-self: flex-start;
 }
 
 .tutorial {
