--- a/index.pug
+++ b/index.pug
@@ -8,58 +8,59 @@ head
   script(src='app.js' defer)
   link(rel='stylesheet' href='css/style.css')
 // Error display
-#displayError.displayError.hide
-  p#txtError.error
 .container
-  .sampler    
-    #videos.videos
-      video#liveVideo(muted='true' playsinline='' autoplay='')
-      video#storedVideo.hide(type='video/webm' playsinline='')
-        audio#audio(controls='' preload='auto')
-          source(src='idea1.mp3' type='audio/mpeg')
-      #micSetup.mic-setup.hidden
-        .selection Seleziona Microfono
-        #devices
-          // where the devices go
-      img#btnMic.mic-icon.half-opacity(src='icns/mic-icon.svg' alt='Microphone choice icon')
-    #buttons
-      .row1    
-        button#btnPlay
-          img(src='icns/play-30.png' alt='')
-        button#btnRecord
-          img(src='icns/record-30.png' alt='')
-        button#btnStop
-          img(src='icns/stop-30.png' alt='')
-      .row2
-        button#btnUpload
-          img(src='icns/eject-30.png' alt='')
-  .tutorial
-    h2 Come funziona?
-    h3
-      |Realizzare il tuo brano
-      br
-      |è semplice
-    ul
-      li
-        img(src='icns/headphones-30.png' alt='')
-        p utilizza le cuffie
-      li
-        img(src='icns/record-30.png' alt='')
-        p per registrare
-      li
-        img(src='icns/stop-30.png' alt='')
-        p per interrompere
-      li
-        img(src='icns/play-30.png' alt='')
-        p per riprodurre
-      li
-        img(src='icns/eject-30.png' alt='')
-        p per inviare
-    h1
-      |Campiono
-      br
-      |Cose
-      |<span class="beta">beta</span>           
+  #displayError.displayError.hide
+    p#txtError.error
+  .main
+    .sampler    
+      #videos.videos
+        video#liveVideo(muted='true' playsinline='' autoplay='')
+        video#storedVideo.hide(type='video/webm' playsinline='')
+          audio#audio(controls='' preload='auto')
+            source(src='idea1.mp3' type='audio/mpeg')
+        #micSetup.mic-setup.hidden
+          .selection Seleziona Microfono
+          #devices
+            // where the devices go
+        img#btnMic.mic-icon.half-opacity(src='icns/mic-icon.svg' alt='Microphone choice icon')
+      #buttons
+        .row1    
+          button#btnPlay
+            img(src='icns/play.png' width='32' alt='')
+          button#btnRecord
+            img(src='icns/rec.png' width='50' alt='')
+          button#btnStop
+            img(src='icns/stop.png' width='32' alt='')
+        .row2
+          button#btnUpload
+            img(src='icns/5_info.png' width='32' alt='')
+    .tutorial
+      h2 Come funziona?
+      h3
+        |Realizzare il tuo brano
+        br
+        |è semplice
+      ul
+        li
+          img(src='icns/1_info.png' width='30' alt='')
+          p utilizza le cuffie
+        li
+          img(src='icns/2_info.png' width='30' alt='')
+          p per registrare
+        li
+          img(src='icns/3_info.png' width='30' alt='')
+          p per interrompere
+        li
+          img(src='icns/4_info.png' width='30' alt='')
+          p per riprodurre
+        li
+          img(src='icns/5_info.png' width='30' alt='')
+          p per inviare
+      h1
+        |Campiono
+        br
+        |Cose
+        |<span class="beta">beta</span>           
 script(src='https://www.gstatic.com/firebasejs/7.14.3/firebase-app.js')
 script(src='https://www.gstatic.com/firebasejs/7.14.3/firebase-storage.js')
 script.
